# IOT_EcoGrow

./: README.md
Soil_Moisture/: soil_moisture3.ino
Soil_Moisture/soil_moisture/: pyproject.toml
Soil_Moisture/soil_moisture/src/soil_moisture/: app.py  mqtt_publisher.py
Soil_Moisture/soil_moisture/src/soil_moisture/templates/: index.html
